# PDF_converter

./: pyproject.toml
OUTPUT/: report.txt
data/: dfdf.xmb  dsfsd.xpm  famouspaintings.lrf  index.djvu  index.epub  index.fb2  index.geojson  index.kml  index.txt  med_uchet_4.rtf  sample1.html  srds.tga  yyhh.fts  аа.docx
pdfconv/: pdfconv.py  v2.py
